--- a/resource_packs/not-only-essentials/texts/zh_CN.lang
+++ b/resource_packs/not-only-essentials/texts/zh_CN.lang
@@ -5,6 +5,13 @@ title.ender_dust.name=末影粉
 title.ender_scroll.name=§5末影卷轴
 title.ender_scroll_unused.name=§s未使用的末影卷轴
 
+title.ender_book.name=§5末影之书
+
 title.mundane_paper.name=平凡的纸
 
 title.goo.name=奇怪的粘液
+
+title.musket.name=火枪
+title.musket_round.name=火枪弹
+title.black_powder.name=黑火药
+
