--- a/resource_packs/not-only-essentials/texts/zh_CN.lang
+++ b/resource_packs/not-only-essentials/texts/zh_CN.lang
@@ -11,12 +11,13 @@ title.noe:mundane_paper.name=平凡的纸
 
 title.noe:goo.name=奇怪的粘液
 
-title.noe:musket.name=火枪
-title.noe:musket_round.name=火枪弹
+title.noe:musket.name=§6火枪
+title.noe:musket_round.name=§9火枪弹
 
 entity.noe:musket_round.name=火枪弹
 
 title.noe:black_powder.name=黑火药
 
-title.noe:cactus_sword.name=仙人掌剑
+title.noe:cactus_sword.name=§9仙人掌剑
 
+title.noe:advanced_leather.name=§8强化皮革
