增加了焦糖面包和腐肉烧皮革

--- a/resource_packs/not-only-essentials/texts/zh_CN.lang
+++ b/resource_packs/not-only-essentials/texts/zh_CN.lang
@@ -21,3 +21,13 @@ title.noe:black_powder.name=黑火药
 title.noe:cactus_sword.name=§9仙人掌剑
 
 title.noe:advanced_leather.name=§8强化皮革
+
+title.noe:caramel_toast.name=焦糖面包
+
+title.noe:prepared_flesh.name=预加工的腐肉
+
+title.noe:purified_flesh.name=净化的腐肉
+
+title.noe:cooked_purified_flesh.name=熟的净化的腐肉
+
+
